# hode

./: .gitignore  .gitmodules  CHANGES.txt  CMakeLists.txt  Makefile  README.md  README.txt  RELEASES.yaml  andy.cpp  benchmark.cpp  compat.h  defs.h  fileio.cpp  fileio.h  fs.h  fs_android.cpp  fs_posix.cpp  fs_win32.cpp  game.cpp  game.h  hode.ini  intern.h  level.h  level1_rock.cpp  level2_fort.cpp  level3_pwr1.cpp  level4_isld.cpp  level5_lava.cpp  level6_pwr2.cpp  level7_lar1.cpp  level8_lar2.cpp  level9_dark.cpp  lzw.cpp  lzw.h  main.cpp  mdec.cpp  mdec.h  mdec_coeffs.h  menu.cpp  menu.h  (+25 more)
.github/workflows/: continuous_integration.yml  publish_release.yml
WinRT/: HeartOfDarkness.sln  HeartOfDarkness.vcxproj  HeartOfDarkness.vcxproj.filters  Package.appxmanifest  README.md
WinRT/sources/: SDL_winrt_main_NonXAML.cpp
